--- a/menu.html
+++ b/menu.html
@@ -631,7 +631,9 @@ l-6 -61 -426 -236 c-235 -131 -428 -236 -430 -234 -1 2 -4 50 -5 107 l-3 104
 
             <!-- *Card: Hamburguesa La Fundadora* -->
             <a href="index.html#card-1" class="card__modal">
+
                 <div class="card">
+
                     <figure class="card__header">
                         <img class="card__img" src="assets/images/products/hamburguesa-la-fundadora.jpg"
                             alt="Hamburguesa Fundadora">
@@ -650,13 +652,17 @@ l-6 -61 -426 -236 c-235 -131 -428 -236 -430 -234 -1 2 -4 50 -5 107 l-3 104
                                 <span class="card__score">4.9</span>
                             </div>
                         </div>
+
                         <p class="card__description">
                             Pan brioche 🍔 + Carne 100% de Res 🍣 + Queso mozzarella 🧀 + Cebolla caramelizada
                             🧅 +
                             Tocineta 🥓 + Vegetales frescos 🥬🥒 + salsas de la casa. 🍶
                         </p>
+
                         <div class="card__body-section-end">
+
                             <h4 class="card__price">COP $15.000</h4>
+
                             <button class="card__add-cart-btn">
                                 <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 -960 960 960" width="48">
@@ -664,18 +670,21 @@ l-6 -61 -426 -236 c-235 -131 -428 -236 -430 -234 -1 2 -4 50 -5 107 l-3 104
                                         d="M465-613v-123H341v-60h124v-123h60v123h123v60H525v123h-60ZM289.788-80Q260-80 239-101.212q-21-21.213-21-51Q218-182 239.212-203q21.213-21 51-21Q320-224 341-202.788q21 21.213 21 51Q362-122 340.788-101q-21.213 21-51 21Zm404 0Q664-80 643-101.212q-21-21.213-21-51Q622-182 643.212-203q21.213-21 51-21Q724-224 745-202.788q21 21.213 21 51Q766-122 744.788-101q-21.213 21-51 21ZM290-287q-42 0-61.5-34t.5-69l61-111-150-319H62v-60h116l170 364h292l156-280 52 28-153 277q-9.362 16.667-24.681 25.833Q655-456 634-456H334l-62 109h494v60H290Z" />
                                 </svg>
                             </button>
+
                             <div class="card__quantity-btn card__quantity-btn--hidden">
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                                <svg class="card__remove icons" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 -960 960 960" width="48">
                                     <path d="M200-450v-60h560v60H200Z" />
                                 </svg>
-                                <span class="card__num-items">1</span>
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                                <input type="number" class="card__num-items"></input>
+                                <svg class="card__add icons" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 -960 960 960" width="48">
                                     <path d="M450-450H200v-60h250v-250h60v250h250v60H510v250h-60v-250Z" />
                                 </svg>
                             </div>
+
                         </div>
+
                     </div>
                 </div>
             </a>
